# RustyGradients

./: .gitignore  CONTRIBUTING.md  CURRENT_STATUS.md  Cargo.toml  FINAL_SUMMARY.md  GIT_COMMIT_MESSAGE.md  MODERNIZATION.md  PERFORMANCE.md  PHASE4_TOKENIZATION.md  PHASE5_HF_LOADER.md  PHASE6_CUDA.md  PHASE6_WEEK1_SUMMARY.md  PHASE6_WEEK2_SUMMARY.md  PROJECT_EVALUATION.md  PROJECT_SUMMARY.md  README.md  ROADMAP.md  bpe_tokenizer_1024.json  build.rs  sRustyGradientsCargo.toml
.cargo/: config.toml
.github/workflows/: ci.yml
benches/: blas_comparison.rs  cuda_comparison.rs  cuda_kernels_bench.rs  layernorm_benchmark.rs  matmul_benchmark.rs  simd_benchmark.rs
examples/: cuda_demo.rs  cuda_kernels_test.rs  load_gpt2_demo.rs  ops_v2_demo.rs  serialization_demo.rs  simple_mlp.rs  tensor_v2_demo.rs  tokenization_comparison.rs  train_gpt_e2e.rs
src/: error.rs  layers.rs  lib.rs  main.rs  ops.rs  optimizers.rs  tensor.rs  tensor_v2.rs  wasm_api.rs
src/backend/: cpu.rs  cuda.rs  cuda_kernels.cu  cuda_kernels_wrapper.rs  fused.rs  mod.rs  simd.rs
src/core/: autograd.rs  autograd_v2.rs  mod.rs
src/losses/: bce.rs  cross_entropy.rs  mod.rs  mse.rs
src/models/: gpt.rs  hf_loader.rs  mod.rs
src/nn/: activations.rs  attention.rs  containers.rs  embedding.rs  feedforward.rs  linear.rs  mod.rs  module.rs  norm.rs  transformer.rs
src/ops/: basic_ops.rs  elementwise.rs  embedding.rs  matmul.rs  mod.rs  norm.rs  reduction.rs  selection.rs  transform.rs
src/ops_v2/: basic.rs  matmul.rs  mod.rs
src/optim/: adam.rs  mod.rs  optimizer.rs  sgd.rs
src/serialization/: checkpoint.rs  mod.rs  safetensors_format.rs
src/tokenization/: bpe_tokenizer.rs  char_tokenizer.rs  hf_tokenizer.rs  mod.rs
tests/: common.rs  nn_test.rs
