[package]
name = "rusty-gradients"
version = "0.1.0"
edition = "2021"
authors = ["Xzdes"]
description = "A deep learning framework in Rust, focusing on autograd and Transformer architectures."
readme = "README.md"
repository = "https://github.com/Xzdes/RustyGradients"
license = "MIT"
keywords = ["deep-learning", "machine-learning", "autograd", "neural-network", "gradients"]
categories = ["science"]


[dependencies]
ndarray = "0.16.1"
rand = "0.9.2"
ndarray-rand = "0.15.0"
thiserror = "2.0.16"