[package]
name = "rusty-gradients"
version = "0.1.0" 
edition = "2021"
authors = ["Xzdes"]

description = "A full-stack deep learning framework in Rust for training and deploying Transformer models, with support for CLI, WebAssembly, and library usage."

license = "MIT"


documentation = "https://docs.rs/rusty-gradients"
repository = "https://github.com/Xzdes/RustyGradients"
homepage = "https://github.com/Xzdes/RustyGradients"


keywords = ["machine-learning", "autograd", "gpt", "transformer", "wasm"]

# ОЧЕНЬ ВАЖНО: Категории, по которым ваш крейт будет отсортирован.
categories = ["science", "computer-science", "wasm", "command-line-utilities"]

# Указываем, какой файл README использовать.
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"] # cdylib нужен для WASM


[dependencies]
ndarray = "0.16.1"
rand = "0.8.5"
ndarray-rand = "0.15.0"
thiserror = "2.0.16"

# --- НОВЫЕ ЗАВИСИМОСТИ ДЛЯ WASM ---
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

getrandom = { version = "0.2", features = ["js"] }


chrono = { version = "0.4", features = ["serde"] } # Добавляем chrono

log = "0.4.27"


# Для удобной отладки: паника в Rust будет выведена в консоль JS
[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

[features]
default = []
# Фича для включения отладочных утилит
wasm-debug = ["console_error_panic_hook"]